fix: endpoint to insert a test corrected